--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <!-- Other properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <kotlin.version>1.9.23</kotlin.version>
+    <kotlin.version>2.1.20</kotlin.version>
     <kotlinx.serialization.version>1.6.3</kotlinx.serialization.version>
 
     <!-- Test lib versions -->
@@ -42,7 +42,7 @@
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-maven-plugin</artifactId>
-        <version>2.1.20</version>
+        <version>${kotlin.version}</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -83,14 +83,14 @@
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib</artifactId>
-      <version>2.1.20</version>
+      <version>${kotlin.version}</version>
     </dependency>
 
     <!-- Test -->
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-test-junit5</artifactId>
-      <version>2.1.20</version>
+      <version>${kotlin.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
