--- a/config/build-config.json
+++ b/config/build-config.json
@@ -57,6 +57,14 @@
 //      }
 //    ]
 //  },
+//  "empiricalDelay": {
+//    "feeds": [
+//      {
+//        "feedId": "RB",
+//        "source": "gs://empirical_delay/"
+//      }
+//    ]
+//  },
   "streetGraph": "streetGraph-${otp.serialization.version.id}.obj",
   "graph": "graph-otp2-${otp.serialization.version.id}.obj",
   "buildReportDir": "report"
