--- a/config/otp-config.json
+++ b/config/otp-config.json
@@ -1,16 +1,20 @@
 {
-  "configVersion" : "v2.8.0-entur-71 - STAGEING, 16-MAY-2025",
+  "configVersion" : "v2.9.0-entur-76-STAGING-2025-11-11",
   "otpFeatures" : {
     "ActuatorAPI" : true,
+    "ConsiderPatternsForDirectTransfers" : true,
     "Emission" : true,
-    "EmpiricalDelay": false,
+    // EmpiricalDelay is on in STAGING and PROD
+    "EmpiricalDelay" : false,
     "FlexRouting" : true,
+    "GoogleCloudStorage" : true,
     "FloatingBike" : true,
-    "Sorlandsbanen" : true,
+    "IncludeEmptyRailStopsInTransfers" : true,
     "MultiCriteriaGroupMaxFilter" : true,
     "OptimizeTransfers" : true,
     "ParallelRouting" : false,
     "ReportApi" : true,
+    "Sorlandsbanen" : true,
     "TransferConstraints" : true
   }
 }
