--- a/config/router-config.json
+++ b/config/router-config.json
@@ -1,27 +1,49 @@
 {
-  "configVersion": "v2.9.0-entur-76-STAGING-2025-11-11",
+  "configVersion": "COPY STAGING 2026-01-21 v2.9.0-entur-166",
   "server": {
     "apiProcessingTimeout": "20s",
+    "apiDocumentationProfile": "ENTUR",
     "traceParameters": [
       {
         "httpRequestHeader": "X-Correlation-ID",
         "httpResponseHeader": "X-Correlation-ID",
-        "logKey" : "correlationId",
+        "logKey": "correlationId",
         "generateIdIfMissing": true
-      }, {
-        "httpRequestHeader" : "ET-Client-Name",
+      },
+      {
+        "httpRequestHeader": "ET-Client-Name",
         "logKey": "etClientName"
       }
-    ]
+    ],
+    "httpResponseTimeMetrics": {
+      "clientHeader": "et-client-name",
+      "monitoredClients": [
+        "ruter-tetApp",
+        "ruter-travel-api",
+        "entur-search",
+        "vy-itinerary-high-priority",
+        "atb-bff",
+        "entur-client-app",
+        "skyss-ios",
+        "troms-bff",
+        "kolumbus-reisevenn"
+      ],
+      "monitoredEndpoints": [
+        "/transmodel/index/graphql"
+      ],
+      "metricName": "otp_http_server_requests",
+      "minExpectedResponseTime": "0.05s",
+      "maxExpectedResponseTime": "10s"
+    }
   },
   "routingDefaults": {
     "streetRoutingTimeout": "5s",
-    "numItineraries" : 12,
+    "numItineraries": 12,
     "transferPenalty": 0,
     "turnReluctance": 1.0,
     "elevatorBoardTime": 90,
     "elevatorBoardCost": 90,
-    "elevatorHopTime" : 20,
+    "elevatorHopTime": 20,
     "elevatorHopCost": 20,
     "bicycle": {
       "speed": 5,
@@ -34,7 +56,7 @@
         "cost": 120
       }
     },
-    "car" : {
+    "car": {
       "reluctance": 10,
       "decelerationSpeed": 2.9,
       "accelerationSpeed": 2.9,
@@ -50,7 +72,7 @@
     },
     "wheelchairAccessibility": {
       "trip": {
-        "onlyConsiderAccessible" : false
+        "onlyConsiderAccessible": false
       },
       "stop": {
         "onlyConsiderAccessible": false
@@ -61,7 +83,7 @@
     },
     "otherThanPreferredRoutesPenalty": 300,
     "transferSlack": 120,
-    "boardSlackForMode" : {
+    "boardSlackForMode": {
       "AIRPLANE": "35m"
     },
     "alightSlackForMode": {
@@ -70,7 +92,11 @@
     "accessEgress": {
       "maxDurationForMode": {
         "BIKE_RENTAL": "20m",
+        "CAR": "3h",
         "SCOOTER_RENTAL": "20m"
+      },
+      "maxStopCountForMode": {
+        "CAR": 0
       }
     },
     "maxDirectStreetDurationForMode": {
@@ -85,7 +111,7 @@
     },
     "ignoreRealtimeUpdates": false,
     "geoidElevation": false,
-    "maxJourneyDuration" : "36h",
+    "maxJourneyDuration": "36h",
     "drivingDirection": "right",
     "transferOptimization": {
       "optimizeTransferWaitTime": true,
@@ -100,15 +126,18 @@
           "modes": [
             "AIRPLANE"
           ]
-        }, {
+        },
+        {
           "subModes": [
             "localCarFerry"
           ]
-        }, {
+        },
+        {
           "agencies": [
             "RB:FLT:Authority:FLT"
           ]
-        }, {
+        },
+        {
           "subModes": [
             "highSpeedRail",
             "regionalRail",
@@ -121,7 +150,8 @@
             "crossCountryRail",
             "railReplacementBus"
           ]
-        }, {
+        },
+        {
           "agencies": [
             "RB:ATU:Authority:1",
             "RB:BOR:Authority:1",
@@ -130,20 +160,24 @@
             "RB:TID:Authority:TID",
             "RB:UNI:Authority:UNI"
           ]
-        }, {
+        },
+        {
           "agencies": [
             "RB:VYB:Authority:1",
             "RB:VYX:Authority:1"
           ]
-        }, {
+        },
+        {
           "agencies": [
             "RB:FLI:Authority:FlixMobility"
           ]
-        }, {
+        },
+        {
           "agencies": [
             "RB:NBU:Authority:002"
           ]
-        }, {
+        },
+        {
           "agencies": [
             "RB:NWY:Authority:d1ea7af1-3c2a-4825-893f-21408ef08480"
           ]
@@ -158,31 +192,33 @@
       "minTransitTimeCoefficient": 0.5,
       "minWaitTimeCoefficient": 0.5,
       "minWindow": "1h",
-      "maxWindow" : "5h"
+      "maxWindow": "5h"
     },
     "stopBoardAlightDuringTransferCost": {
       "DISCOURAGED": 1500,
       "ALLOWED": 75,
       "RECOMMENDED": 30,
-      "PREFERRED" : 0
+      "PREFERRED": 0
     }
   },
   "flex": {
     "maxTransferDuration": "5m",
     "maxFlexTripDuration": "1h15m"
   },
+// THIS IS ENABLED IN STAGING, BUT GENERATE A LOT OF NOICE LOCALY; HENCE COMMENTED OUT
 //  "vehicleRentalServiceDirectory": {
 //    "url": "http://mobility-cache.tst.entur.internal/gbfs-internal/v3/manifest.json",
 //    "sourcesName": "systems",
 //    "updaterUrlName": "url",
 //    "updaterNetworkName": "id",
 //    "headers": {
-//      "ET-Client-Name" : "entur-otp2"
+//      "ET-Client-Name": "entur-otp2"
 //    },
 //    "networks": [
 //      {
 //        "network": "default-network"
-//      }, {
+//      },
+//      {
 //        "network": "voioslo",
 //        "geofencingZones": false
 //      }
@@ -190,12 +226,13 @@
 //  },
   "transmodelApi": {
     "hideFeedId": true,
-    "maxNumberOfResultFields" : 600000
+    "maxNumberOfResultFields": 600000
   },
   "timetableUpdates": {
     "purgeExpiredData": false
   },
   "updaters": [
+    // Read SIRI-ET updates from local file - this is not from STAGING
     {
       "type": "siri-et-updater",
       "url": "file://{{OTP_SETUP_PATH}}/rt",
@@ -205,25 +242,27 @@
       "blockReadinessUntilInitialized": true,
       "fuzzyTripMatching": true
     }
+
+// FROM STAGING
 //    {
 //      "type": "siri-sx-updater",
 //      "frequency": "1m",
-//      "url" : "http://realtime-cache.tst.entur.internal/sx",
+//      "url": "http://realtime-cache.tst.entur.internal/sx",
 //      "feedId": "RB",
 //      "blockReadinessUntilInitialized": true,
 //      "headers": {
-//        "ET-Client-Name": "otp2-7965889b49-7hcc2-SX"
+//        "ET-Client-Name": "otp2-6756f9cc8d-g2gzw-SX"
 //      },
-//      "earlyStart" : "0s"
+//      "earlyStart": "0s"
 //    },
 //    {
 //      "type": "siri-et-google-pubsub-updater",
-//      "feedId" : "RB",
+//      "feedId": "RB",
 //      "reconnectPeriod": "5s",
 //      "initialGetDataTimeout": "1m20s",
 //      "topicProjectName": "ent-anshar-tst",
 //      "subscriptionProjectName": "ent-otp2-tst",
-//      "topicName" : "xml.estimated_timetables",
+//      "topicName": "xml.estimated_timetables",
 //      "dataInitializationUrl": "http://realtime-cache.tst.entur.internal/et",
 //      "fuzzyTripMatching": true,
 //      "producerMetrics": true
